--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Our Simple Site</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale= 1.0">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
-    {#<link rel="stylesheet" href="{% static "css/style.css" %}">#}
+    {#    <link rel="stylesheet" href="{% static "css/style.css" %}">#}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
-    {% block head_js %} {% endblock %}
+    {#scripts#}
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.js"></script>
+
+    {% block head_js %}{% endblock %}
+
 </head>
 <body>
 <div class="container">
@@ -21,13 +24,19 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="{% url 'register' %}">Register</a></li>
-            <li><a href="{% url 'login' %}">Log In</a></li>
-            <li><a href="{% url 'logout' %}">Log Out</a></li>
-        </ul>
-        <h1><span class="fui-settings-16 muted">Our Simple Site</span></h1>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'profile' %}">Profile</a></li>
+                <li><a href="{% url 'logout' %}">Log Out</a></li>
+            {% else %}
+                <li><a href="{% url 'register' %}">Register</a></li>
+                <li><a href="{% url 'login' %}">Log In</a></li>
+            {% endif %}
+
+        <h1><span class="fui-settings-16-muted">We Are Social</span></h1>
     </div>
     <hr>
+
+
     {% if messages %}
         <div class="alert alert-success">
             <div class="messages">
@@ -37,15 +46,21 @@
             </div>
         </div>
     {% endif %}
+
+
     <div class="container">
         {% block content %}
         {% endblock %}
     </div>
+
     <hr>
+
+
     <div class="footer">
-        <p>Made By Bootcampers and Django</p>
+        <p>footer note</p>
     </div>
 </div>
+
 </body>
 
 
